--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,7 +31,15 @@ html, body, #root {
   padding: 24px;
   z-index: 2000;
 }
-
+.modal-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
 .modal {
   width: min(720px, 100%);
   max-height: 85vh;
@@ -103,7 +111,19 @@ html, body, #root {
   text-decoration: none;
   color: inherit;
 }
-
+.MoreAboutMe {
+  margin: 2rem auto 0 auto;  /* top auto bottom auto */
+  display: block;  
+  margin-top: 10rem;
+  justify-content: center;
+  font-size: 1rem;
+  font-weight: 600;
+  color: black;
+  background-color: transparent;
+  border-color:#341C02 ;
+  border-radius: 8px;
+  cursor: pointer;
+}
 
 .navigation {
   display: flex;
@@ -127,6 +147,28 @@ html, body, #root {
   padding-left: 8rem;
   font-family: 'Inter', sans-serif;
   max-width: 1200px;
+}
+#workexperience {
+  padding-top: 12rem;
+  padding-left: 8rem;
+  font-family: 'Inter', sans-serif;
+  max-width: 1200px;
+}
+#contact {
+  padding-top: 12rem;
+  padding-left: 8rem;
+  font-family: 'Inter', sans-serif;
+  max-width: 1200px;
+}
+.contact-section-header h2 {
+  font-size: 32px;              
+  font-family: 'Inter', sans-serif;
+}
+.contact-icons {
+  display: flex;
+  gap: 24px;
+  font-size: 80px;
+  margin-top: 1rem;
 }
 .projecttitle {
   font-size : 3rem;
@@ -178,13 +220,83 @@ html, body, #root {
   margin-top: 0.2rem;
   margin-bottom: 1.5rem;
 }
+
 .card-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 24px;
   width: 100%;
 }
-
+.experience-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 24px;
+  width: 66.6667%;
+}
+.experience-card {
+  max-width: 260px;    
+  aspect-ratio: 1 / 1;   
+  display: grid;
+  grid-template-rows: 60% 40%;
+  overflow: hidden;
+  border-radius: 12px;
+  background-color: #FFFFF0;
+  border: 2px solid #341C02; 
+  transition: transform 0.3s ease;
+}
+.experience-card:hover {
+  transform: translateY(-6px);
+}
+.experience-image {
+  overflow: hidden;
+}
+.Tony-image {
+  width: 100%;
+  height: 100%;           /* fixed height needed */
+  object-fit: cover;       /* crop instead of stretch */
+  object-position: center 85%;       
+}
+.experience-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;         
+  display: block;
+}
+.experience-content {
+  padding: 10px 12px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 4px;
+}
+.experience-content h3 {
+  margin: 0;
+  line-height: 1.1;
+  font-size: 1rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.experience-content p {
+  margin: 0;
+  line-height: 1.2;
+  font-size: 0.9rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.experience-content small {
+  marging: 0;
+  line-height: 1.1;
+  font-size: 0.8rem;
+  font-style: italic;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
 .project-card {
   max-width: 260px;    
   aspect-ratio: 1 / 1;   
@@ -236,6 +348,14 @@ html, body, #root {
   overflow: hidden;
 }
 
+.modal-video {
+  width: 100%;
+  max-height: 400px;
+  border-radius: 12px;
+  object-fit: contain;
+  display: block;
+  margin-bottom: 14px;
+}
 .card {
   width: 600px;
   height: 347px;
